Kubernetes_CKA_Alok/deployment_strategy/azure/recreate-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web-demo
spec:
  # Recreate deletes all existing V1 pods before creating V2 pods.
  # This intentionally causes temporary downtime.
  strategy:
    type: Recreate

  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web
        version: v2

    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine

          ports:
            - name: http
              containerPort: 80

          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

      volumes:
        - name: www
          configMap:
            name: web-v2
